# herbie

./: .gitignore  LICENSE  Makefile  contributing.md  dani_california.ipynb  drum_machine.ipynb  explore_effects.ipynb  fairy_tail.ipynb  filters.py  jam.ipynb  justfile  makefile  nb_utils.py  notedefs.py  notes.py  pyproject.toml  quothe.py  readme.md  sines_of_life.ipynb  stranger_things.ipynb  tasks.py
herbie/: __init__.py  filters.py  generator.py  notes.py  scale.py
notebooks/: dani_california.ipynb  drum_machine.ipynb  explore_effects.ipynb  fairy_tail.ipynb  jam.ipynb  nb_utils.py  sines_of_life.ipynb  stranger_things.ipynb
notes/: scale.py
quothe/: filters.py  scale.py
